--- a/src/components/sudoku-board-cell/sudoku-board-cell.css
+++ b/src/components/sudoku-board-cell/sudoku-board-cell.css
@@ -41,14 +41,15 @@ sudoku-board-cell-component .rowdraft {
 }
 
 sudoku-board-cell-component .celldraft {
-  /* background-color: yellow; */
   flex: 1;
   flex-grow: 1;
   display: flex;
   justify-content: center;
+  font-family: "draft";
   font-size: var(--draftvalue-fontsize);
   font-weight: bold;
-  color: slategrey;
+  /* color: slategrey; */
+  color: var(--draftvalue-color);
 }
 
 sudoku-board-cell-component .possibleValue {
@@ -75,7 +76,8 @@ sudoku-board-cell-component .sudoku-board-cell .value {
   margin: auto;
   font-size: var(--value-fontsize);
   line-height: var(--value-fontsize);
-  color: slategrey
+  /* color: slategrey; */
+  color: var(--value-color);
 }
 
 
